--- a/regression-test/pipeline/p0/conf/fe.conf
+++ b/regression-test/pipeline/p0/conf/fe.conf
@@ -71,6 +71,9 @@ enable_job_schedule_second_for_test = true
 enable_workload_group = true
 publish_topic_info_interval_ms = 1000
 
+# publish version don't check schema change tablets
+publish_version_check_alter_replica = false
+
 disable_decimalv2 = false
 disable_datev1 = false
 
