--- a/regression-test/pipeline/p1/conf/fe.conf
+++ b/regression-test/pipeline/p1/conf/fe.conf
@@ -71,6 +71,9 @@ enable_job_schedule_second_for_test = true
 enable_workload_group = true
 publish_topic_info_interval_ms = 1000
 
+# publish version don't check schema change tablets
+publish_version_check_alter_replica = false
+
 master_sync_policy = WRITE_NO_SYNC
 replica_sync_policy = WRITE_NO_SYNC
 
