--- a/cloud/test/CMakeLists.txt
+++ b/cloud/test/CMakeLists.txt
@@ -45,6 +45,8 @@ add_executable(fdb_injection_test fdb_injection_test.cpp)
 
 add_executable(s3_accessor_test s3_accessor_test.cpp)
 
+add_executable(hdfs_accessor_test hdfs_accessor_test.cpp)
+
 add_executable(stopwatch_test stopwatch_test.cpp)
 
 message("Meta-service test dependencies: ${TEST_LINK_LIBS}")
@@ -71,6 +73,8 @@ target_link_libraries(resource_test ${TEST_LINK_LIBS})
 target_link_libraries(http_encode_key_test ${TEST_LINK_LIBS})
 
 target_link_libraries(s3_accessor_test ${TEST_LINK_LIBS})
+
+target_link_libraries(hdfs_accessor_test ${TEST_LINK_LIBS})
 
 target_link_libraries(stopwatch_test ${TEST_LINK_LIBS})
 
