[feature](selectdb-cloud) add injection test http api and fix cloud compaction http api

--- a/be/CMakeLists.txt
+++ b/be/CMakeLists.txt
@@ -324,6 +324,10 @@ if (WITH_MYSQL)
     add_definitions(-DDORIS_WITH_MYSQL)
 endif()
 
+if (ENABLE_INJECTION_POINT)
+    set(CXX_COMMON_FLAGS "${CXX_COMMON_FLAGS} -DENABLE_INJECTION_POINT")
+endif()
+
 # Enable memory tracker, which allows BE to limit the memory of tasks such as query, load,
 # and compaction,and observe the memory of BE through be_ip:http_port/MemTracker.
 # Adding the option `USE_MEM_TRACKER=OFF sh build.sh` when compiling can turn off the memory tracker,
