--- a/docker/thirdparties/docker-compose/hive/custom_settings.env
+++ b/docker/thirdparties/docker-compose/hive/custom_settings.env
@@ -1,5 +1,30 @@
+#!/bin/bash
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+
+# Change this to a specific string.
+# Do not use "_" or other sepcial characters, only number and alphabeta.
+# NOTICE: change this uid will modify hadoop-hive.env and hive-*.yaml
+
 export FS_PORT=8020 #should be same in regression-conf.groovy
 export HMS_PORT=9083 #should be same in regression-conf.groovy
+export HS_PORT=10000 #should be same in regression-conf.groovy
+export PG_PORT=5432 #TODO: this port is not supported to change yet
+
 export NAMENODE_HTTP_PORT=50070
 export NAMENODE_HTTPS_PORT=50470
 export NAMENODE_SECONDARY_HTTP_PORT=50090
