--- a/docker/thirdparties/docker-compose/hive/hive-2x_settings.env
+++ b/docker/thirdparties/docker-compose/hive/hive-2x_settings.env
@@ -20,15 +20,16 @@
 # Do not use "_" or other sepcial characters, only number and alphabeta.
 # NOTICE: change this uid will modify hadoop-hive.env and hive-*.yaml
 
-export FS_PORT=8020 #should be same in regression-conf.groovy
-export HMS_PORT=9083 #should be same in regression-conf.groovy
-export HS_PORT=10000 #should be same in regression-conf.groovy
+export FS_PORT=8220 #should be same in regression-conf.groovy
+export HMS_PORT=9283 #should be same in regression-conf.groovy
+export HS_PORT=12000 #should be same in regression-conf.groovy
+export PG_PORT=5632 #should be same in regression-conf.groovy
 
-export NAMENODE_HTTP_PORT=50070
-export NAMENODE_HTTPS_PORT=50470
-export NAMENODE_SECONDARY_HTTP_PORT=50090
-export NAMENODE_SECONDARY_HTTPS_PORT=50091
-export DATANODE_PORT=50010
-export DATANODE_HTTP_PORT=50075
-export DATANODE_HTTPS_PORT=50475
-export DATANODE_IPC_PORT=50020
+export NAMENODE_HTTP_PORT=52070
+export NAMENODE_HTTPS_PORT=52470
+export NAMENODE_SECONDARY_HTTP_PORT=52090
+export NAMENODE_SECONDARY_HTTPS_PORT=52091
+export DATANODE_PORT=52010
+export DATANODE_HTTP_PORT=52075
+export DATANODE_HTTPS_PORT=52475
+export DATANODE_IPC_PORT=52020
