change hive docker to bridge network

--- a/docker/thirdparties/docker-compose/hive/hive-2x_settings.env
+++ b/docker/thirdparties/docker-compose/hive/hive-2x_settings.env
@@ -18,18 +18,9 @@
 
 # Change this to a specific string.
 # Do not use "_" or other sepcial characters, only number and alphabeta.
-# NOTICE: change this uid will modify hadoop-hive.env and hive-*.yaml
+# NOTICE: change this uid will modify hive-*.yaml
 
-export FS_PORT=8220 #should be same in regression-conf.groovy
-export HMS_PORT=9283 #should be same in regression-conf.groovy
-export HS_PORT=12000 #should be same in regression-conf.groovy
-export PG_PORT=5632 #should be same in regression-conf.groovy
-
-export NAMENODE_HTTP_PORT=52070
-export NAMENODE_HTTPS_PORT=52470
-export NAMENODE_SECONDARY_HTTP_PORT=52090
-export NAMENODE_SECONDARY_HTTPS_PORT=52091
-export DATANODE_PORT=52010
-export DATANODE_HTTP_PORT=52075
-export DATANODE_HTTPS_PORT=52475
-export DATANODE_IPC_PORT=52020
+export FS_PORT=8120 #should be same in regression-conf.groovy
+export HMS_PORT=9183 #should be same in regression-conf.groovy
+export HS_PORT=11000 #should be same in regression-conf.groovy
+export PG_PORT=5532 #should be same in regression-conf.groovy
