--- a/docker/thirdparties/docker-compose/hive/hive-3x_settings.env
+++ b/docker/thirdparties/docker-compose/hive/hive-3x_settings.env
@@ -18,18 +18,9 @@
 
 # Change this to a specific string.
 # Do not use "_" or other sepcial characters, only number and alphabeta.
-# NOTICE: change this uid will modify hadoop-hive.env and hive-*.yaml
+# NOTICE: change this uid will modify hive-*.yaml
 
-export FS_PORT=8320 #should be same in regression-conf.groovy
-export HMS_PORT=9383 #should be same in regression-conf.groovy
-export HS_PORT=13000 #should be same in regression-conf.groovy
-export PG_PORT=5732 #should be same in regression-conf.groovy
-
-export NAMENODE_HTTP_PORT=53070
-export NAMENODE_HTTPS_PORT=53470
-export NAMENODE_SECONDARY_HTTP_PORT=53090
-export NAMENODE_SECONDARY_HTTPS_PORT=53091
-export DATANODE_PORT=53010
-export DATANODE_HTTP_PORT=53075
-export DATANODE_HTTPS_PORT=53475
-export DATANODE_IPC_PORT=53020
+export FS_PORT=8020 #should be same in regression-conf.groovy
+export HMS_PORT=9083 #should be same in regression-conf.groovy
+export HS_PORT=10000 #should be same in regression-conf.groovy
+export PG_PORT=5432 #should be same in regression-conf.groovy
