--- a/fe/fe-core/pom.xml
+++ b/fe/fe-core/pom.xml
@@ -499,6 +499,11 @@ under the License.
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.17</version>
+        </dependency>
+        <dependency>
             <groupId>hu.webarticum</groupId>
             <artifactId>tree-printer</artifactId>
         </dependency>
