[docker](hive) add hive3 docker compose and modify scripts (#33115)
add hive3 docker compose from:
big-data-europe/docker-hive#56

--- a/docker/thirdparties/docker-compose/hive/hive-2x_settings.env
+++ b/docker/thirdparties/docker-compose/hive/hive-2x_settings.env
@@ -16,26 +16,11 @@
 # specific language governing permissions and limitations
 # under the License.
 
-####################################################################
-# This script will generate hadoop-hive.env from hadoop-hive.env.tpl
-####################################################################
+# Change this to a specific string.
+# Do not use "_" or other sepcial characters, only number and alphabeta.
+# NOTICE: change this uid will modify hive-*.yaml
 
-set -eo pipefail
-
-ROOT="$(cd "$(dirname "${BASH_SOURCE[0]}")" &>/dev/null && pwd)"
-FS_PORT=8020
-HMS_PORT=9083
-
-cp "${ROOT}"/hadoop-hive.env.tpl "${ROOT}"/hadoop-hive.env
-# Need to set hostname of container to same as host machine's.
-# Otherwise, the doris process can not connect to namenode directly.
-HOST_NAME="doris--"
-
-{
-    echo "FS_PORT=${FS_PORT}"
-    echo "HMS_PORT=${HMS_PORT}"
-    echo "CORE_CONF_fs_defaultFS=hdfs://${externalEnvIp}:${FS_PORT}"
-    echo "HOST_NAME=${HOST_NAME}"
-    echo "externalEnvIp=${externalEnvIp}"
-
-} >>"${ROOT}"/hadoop-hive.env
+export FS_PORT=8220 #should be same in regression-conf.groovy
+export HMS_PORT=9283 #should be same in regression-conf.groovy
+export HS_PORT=12000 #should be same in regression-conf.groovy
+export PG_PORT=5632 #should be same in regression-conf.groovy
