jdk_version_in_image

--- a/docker/runtime/be/Dockerfile
+++ b/docker/runtime/be/Dockerfile
@@ -16,11 +16,12 @@
 # under the License.
 
 # how to use Dockerfile.
-# this is dockerfile for build doris fe image on amd64.
+# this is dockerfile for build doris be image
 # when build youself image.
-# 1. pull binary from official website and decompress into resource directory that the level equals with Dockerfile_be_ubuntu.
-# 2. untar xxxx.tar.gz in resource directory, update the dockerfile field `apache-doris-xxx`, replace with real version.
-# 3. run commad docker build -t xxx.doris.be:xx -f Dockerfile_be_ubuntu.
+# 1. pull binary from official website and decompress into resource directory that the level equals with this Dockerfile.
+# 2. untar xxxx.tar.gz in resource directory, update the dockerfile field `apache-doris-xxx`, replace with real version and target arch.
+# 3. run commad docker build -t xxx.doris.be:xx -f Dockerfile --build-arg DORIS_VERSION=2.1.2
+
 
 # we have support buildx for amd64 and arm64 architecture image build.
 # get the binary from doris github and utar into resource, update the directory as apache-`version(example:2.0.1)`-bin-`architecture(amd64/arm64)` mode.
@@ -30,7 +31,7 @@ FROM ubuntu:22.04
 
 ARG TARGETARCH
 
-ARG DORIS_VERSION="x.x.x"
+ARG DORIS_VERSION="2.x.x"
 
 RUN sed -i -e 's/^APT/# APT/' -e 's/^DPkg/# DPkg/' /etc/apt/apt.conf.d/docker-clean && \
     apt-get update -y &&  DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
@@ -38,12 +39,24 @@ RUN sed -i -e 's/^APT/# APT/' -e 's/^DPkg/# DPkg/' /etc/apt/apt.conf.d/docker-cl
     curl wget less vim htop iproute2 numactl jq iotop sysstat \
     tcpdump iputils-ping dnsutils strace lsof blktrace tzdata \
     bpfcc-tools linux-headers-realtime linux-tools-realtime silversearcher-ag \
-    net-tools openjdk-8-jdk && \
+    net-tools
+
+
+
+RUN if echo $DORIS_VERSION | grep -E '^(0\.|1\.|2\.)' >>/dev/null ; then \
+        DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends openjdk-8-jdk && \
+        ln -s /usr/lib/jvm/java-8-openjdk-${TARGETARCH:-amd64} /usr/lib/jvm/java; \
+    else \
+        DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends openjdk-17-jdk && \
+        ln -s /usr/lib/jvm/java-17-openjdk-${TARGETARCH:-amd64} /usr/lib/jvm/java; \
+    fi; \
     rm -rf /var/lib/apt/lists/*
 
+
 # set environment variables
-ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-${TARGETARCH:-amd64} \
-        PATH="/opt/apache-doris/be/bin:${PATH}"
+
+ENV JAVA_HOME=/usr/lib/jvm/java
+ENV PATH=$PATH:$JAVA_HOME/bin:/opt/apache-doris/be/bin
 
 # apache-doris/be from doris release xxxx.tar.gz.please update the version in follows x.x.x.
 ADD resource/apache-doris-${DORIS_VERSION}-bin-${TARGETARCH:-amd64}/be /opt/apache-doris/be
